добавлена фича с пробелом, нужны тесты

--- a/tetris/index.html
+++ b/tetris/index.html
@@ -192,6 +192,7 @@
         <option value="1000">Eazy</option>
         <option value="700">Medium</option>
         <option value="400">Hard</option>
+        <option value="50">World champion</option>
       </select>
     </div>
     <div>
@@ -202,7 +203,8 @@
       Controls: <br>
       ^ - turn <br>
       space - hard  drop <br>
-      ESC - pause
+      ESC - pause <br>
+      R - quick reset (test)
       </p>
     </div>
   </div>
