--- a/tetris/index.html
+++ b/tetris/index.html
@@ -91,11 +91,11 @@
     }
     /* Медиазапрос для небольших экранов */
     @media (max-width: 480px) {
-      .info {
-        font-size: 16px;
-        top: 10px;
-        left: 10px;
+      body {
+        background-color: #2f2;
+        padding-top: 20%;
       }
+
       #menu-overlay h1 {
         font-size: 2em;
       }
@@ -115,7 +115,7 @@
     @media (max-width: 768px) {
       body {
         font-size: 14px;
-        padding-top: 30%;
+        padding-top: 15%;
       }
 
       .field {
