--- a/tetris/index.html
+++ b/tetris/index.html
@@ -97,7 +97,7 @@
       }
 
       .field {
-        transform: scale(0.8);
+        transform: scale(0.9);
       }
 
       #menu-overlay h1 {
@@ -112,6 +112,13 @@
       #mobile-controls button {
         font-size: 18px;
         padding: 8px 12px;
+      
+      }
+    }
+
+    @media (max-height: 600px) {
+      body {
+        padding-top: 5%;
       }
     }
     
@@ -123,7 +130,7 @@
       }
 
       .field {
-      transform: scale(0.8);
+      transform: scale(0.9);
       }
     }
 
